# DINOVsis

./: README.md  pyproject.toml
config/: config.oldyaml  config.yaml
src/: dataset.py  dino_adapter.py  head_model.py  inference.py  load_model.py  preprocess_data.py  train.py
