[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "dinoUnet_segmentation"
version = "0.1.0"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]          # look for packages starting from dinov3-main/
include = ["dinov3*"]  # include dinov3 and all subpackages